--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ a {
 
 header {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
   padding: 10px;
   /* border-bottom: 1px solid #edd9b4;
@@ -49,7 +49,8 @@ body {
   /* background-position: center center;
   background-attachment: fixed; */
   height: 100vh;
-  background: url("./back.jpg") no-repeat center center fixed;
+  background: url("./vintage-grunge-blue-concrete-texture-studio-wall-background-with-vignette.jpg")
+    no-repeat center center fixed;
   background-size: cover;
 }
 
@@ -76,7 +77,7 @@ body {
 
 .container {
   text-align: center;
-  margin-top: 150px;
+  margin-top: 120px;
 }
 
 .container .name h1 {
@@ -151,6 +152,17 @@ body {
 }
 
 @media only screen and (max-width: 768px) {
+  .container {
+  }
+
+  .container .name h1 {
+    font-size: 40px;
+  }
+
+  .container .name h5 {
+    font-size: 20px;
+  }
+
   .form {
     width: 100%;
   }
